--- a/movieGuide/Base.lproj/Main.storyboard
+++ b/movieGuide/Base.lproj/Main.storyboard
@@ -145,7 +145,7 @@
         <scene sceneID="tc5-kK-nDb">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5Xc-d3-Hn6" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Now Playing" selectedImage="now_playing_tabbar_item" id="Tyy-Py-Dzu"/>
+                    <tabBarItem key="tabBarItem" title="Now Playing" image="now_playing_tabbar_item" selectedImage="now_playing_tabbar_item" id="Tyy-Py-Dzu"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Itm-sB-Sdk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -178,10 +178,10 @@
             </objects>
             <point key="canvasLocation" x="108" y="38.23088455772114"/>
         </scene>
-        <!--View Controller-->
+        <!--Popular View Controller-->
         <scene sceneID="7S0-tN-37h">
             <objects>
-                <viewController id="6ab-fD-ubC" sceneMemberID="viewController">
+                <viewController id="6ab-fD-ubC" customClass="PopularViewController" customModule="movieGuide" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="O06-Bf-5jZ"/>
                         <viewControllerLayoutGuide type="bottom" id="OeS-pW-tW8"/>
@@ -189,9 +189,44 @@
                     <view key="view" contentMode="scaleToFill" id="ytP-Y1-yEt">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8OK-1m-0v8">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="610"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="DF4-Yp-jO2">
+                                    <size key="itemSize" width="185" height="317"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PosterCell" id="xqG-pP-1Wt" customClass="PosterCell" customModule="movieGuide" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="185" height="317"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="185" height="317"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Eer-qe-bo3">
+                                                    <rect key="frame" x="0.0" y="2" width="185" height="315"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <connections>
+                                            <outlet property="posterImageView" destination="Eer-qe-bo3" id="SUe-AA-YeW"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="M7G-vE-esv"/>
+                    <connections>
+                        <outlet property="collectionView" destination="8OK-1m-0v8" id="27E-Mf-ThF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5sm-yQ-Las" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -201,7 +236,7 @@
         <scene sceneID="sM1-mn-yrN">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="m8Z-hd-GBM" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Most Popular" selectedImage="now_playing_tabbar_item" id="DzR-NY-dh0"/>
+                    <tabBarItem key="tabBarItem" title="Most Popular" image="reel_tabbar_icon" selectedImage="reel_tabbar_icon" id="DzR-NY-dh0"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="IRH-7C-wq3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -219,5 +254,6 @@
     </scenes>
     <resources>
         <image name="now_playing_tabbar_item" width="21" height="21"/>
+        <image name="reel_tabbar_icon" width="25" height="25"/>
     </resources>
 </document>
